# evolve-machine-game

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.template  LICENSE  combined.ld
.github/actions/cache_cc65/: action.yml
.github/workflows/: main.yml
audio/: EPSM OST 2.fms  NESDEV_Compo_2023_EPSM_LITE_copy.fms  evolve_machine.fms  evolve_machine_4_2_1.fms  evolve_machine_orig.fms  exported.txt  test_rhythm.s  whatever.asm
ca65bin/: README.md  donut.s  evolve_machine.dmc  evolve_machine.s  famistudio_ca65.s  famistudio_ca65_org.s  famistudio_ca65_stock.s  generated.h  llvm.cfg  music.s
chr/: ND2023_Title.nss  sprites.nss  test_bg1.nss  test_bg2.nss
chr/bitmaps/: walker.aseprite
chr/compressed/: generated.h
chr/metasprites/: armadillo.chr  armadillo.msb  hamster.chr  hamster.msb  hamsterball.msb  kitty.chr  kitty.msb  pidgey.chr  pidgey.msb  weapon_cube  weapon_cube.chr  weapon_cube.msb  weapon_diamond.chr  weapon_diamond.msb  weapon_pyramid.chr  weapon_pyramid.msb  weapon_sphere.chr  weapon_sphere.msb  weapons.chr  weapons.msb
chr/raw/: Font.nss  HUD.nss  gritty.chr  test_bg1.nss  test_map.chr  titlescreen.chr
chr/raw/sprites/: Shapes-Sheet.aseprite  Slime-Blue.aseprite  kitty.ase  weapons.aseprite
chr/raw/sprites/enemies/: armadillo.tpr  pigeon.tpr
chr/raw/sprites/enemies/blob/: blob.aseprite  blob.chr  blob.msb
chr/raw/sprites/enemies/hamster_ball/: HMBTR-Ball.aseprite  HMBTR-Hamster.aseprite
chr/tiled/: leftright.tmx  single.tmx  start.tmx  updown.tmx
cmake/: AddCa65Source.cmake  BuildMetasprites.cmake  BuildNESTiles.cmake  CompressCHR.cmake  GenerateCA65Binary.cmake
scripts/: bin2h.py  debug.lua  debug_color_performance.lua  donut.py  hitbox.lua  map_viewer.lua  process_background.py  process_metasprite.py  process_tiled_maps.py  split_nes_output.py
src/: ca65.s  chr.cpp  chr.hpp  chr.s  common.hpp  dungeon_generator.cpp  dungeon_generator.hpp  enemy.cpp  enemy.hpp  game.cpp  game.hpp  game.s  generate_seed.cpp  generate_seed.hpp  graphics.hpp  graphics.s  main.cpp  map.hpp  map_loader.cpp  map_loader.hpp  music.hpp  nes_extra.cpp  nes_extra.hpp  object.cpp  object.hpp  rand.cpp  rand.hpp  soa-struct.inc  sprite_render.cpp  sprite_render.hpp  sprite_render.s  title_screen.cpp  title_screen.hpp
src/ca65/: donut.s  evolve_machine.s  evolve_machine_4_2_1.dmc  evolve_machine_4_2_1.s  evolve_machine_sfx.s  evolve_machine_sfx2.s  famistudio_ca65.s  metasprite.s  music.s
tools/: huffmunch_list.txt  huffmunch_list_format.md
tools/Darwin/cc65/: ca65  cl65  ld65  od65
tools/Darwin/famistudio/FamiStudio.app/Contents/MacOS/: NesSndEmu.dylib
tools/Darwin/famistudio/FamiStudio.app/Contents/MacOS/Localization/: FamiStudio.eng.ini
tools/Darwin/tilificator/: setup.py  tilificatorgui.py  versioning.py
tools/Darwin/tilificator/tilificator/: SpriteImageWidget.py  SpriteImageWidgetDelegate.py  common.py  cut_spritesheet.py  nes_metasprite_io.py  optimizationdialog.py  palettedimagewidget.py  rectangles_widget.py  tilesettingsdialog.py  tilificator.py  tilingmethoddragqueen.py
tools/Windows/famistudio/: FamiStudio.deps.json  FamiStudio.runtimeconfig.dev.json
tools/Windows/nestiler/: README.md  nestiler-colors.json
tools/Windows/tilificator/: c_tile.c  setup.py  tilificatorgui.py  versioning.py
tools/Windows/tilificator/tilificator/: AboutDialog.py  SpriteImageWidget.py  SpriteImageWidgetDelegate.py  TileTableWidget.py  TilificatorProject.py  array2d.py  cut_spritesheet.py  import_raw_tiles.py  nes_metasprite_asm_export.py  optimizationdialog.py  palettedimagewidget.py  rectangles_widget.py  sprite.py  spritetile.py  tile.py  tilesettingsdialog.py  tilingmethod.py  tilingmethodfullmatch.py  tilingmethodrect.py  tilingmethodshiftedrows.py  tilingmethodshiftedrowsnooverlap.py
tools/Windows/tilificator/tilificator.egg-info/: PKG-INFO  SOURCES.txt
